# learning

airflow/: pyproject.toml
dbt/dbt_exam_preparation/dbt_projects/refactoring_for_modularity/: pyproject.toml
dbt/dbt_exam_preparation/dbt_projects/refactoring_for_modularity/refactoring_for_modularity/: dbt_project.yml  packages.yml
dbt/dbt_exam_preparation/dbt_projects/refactoring_for_modularity/refactoring_for_modularity/models/legacy/: fct_customer_orders.sql
dbt/dbt_exam_preparation/dbt_projects/refactoring_for_modularity/refactoring_for_modularity/models/marts/: fct_customer_orders.sql
dbt/dbt_exam_preparation/dbt_projects/refactoring_for_modularity/refactoring_for_modularity_training/: packages.yml
dbt/dbt_exam_preparation/dbt_projects/refactoring_for_modularity/refactoring_for_modularity_training/analyses/: compare_queries.sql
dbt/dbt_exam_preparation/dbt_projects/refactoring_for_modularity/refactoring_for_modularity_training/models/: process.md
dbt/dbt_exam_preparation/dbt_projects/refactoring_for_modularity/refactoring_for_modularity_training/models/legacy/: customer_orders.sql
web-scrapping/: pyproject.toml
web-scrapping/web_scrapping_projects/: find_all_function.py  find_function.py  how_to_get_the_html.py  infintine_scrolling.py  multiple_pages.py  nested_tags.py  scrape_selenium.py  scraping_a_table.py  scrapping_twitter.py  selenium_input_text.py  selenium_self_scrolling.py  test_site.py
web-scrapping/web_scrapping_projects/exercises/: 1_stocks.py  2_nfl_stats.py  3_multiple_pages.py  4_selenium_imdb.py  5_indeed.py  indeed.csv
(+66 files in other folders)
