[tool.poetry]
name = "web-scrapping"
version = "0.1.0"
description = ""
authors = ["AndMoleiro <andre.o.moleiro@gmail.com>"]
readme = "README.md"
packages = [{include = "web_scrapping"}]

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.18.1"
beautifulsoup4 = "^4.12.3"
lxml = "^5.1.0"
requests = "^2.31.0"
pandas = "^2.2.2"
jinja2 = "^3.1.4"
tabulate = "^0.9.0"
tqdm = "^4.66.4"
webdriver-manager = "^4.0.1"
icecream = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"